--- a/src/index.html
+++ b/src/index.html
@@ -1,35 +1,49 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="./assets/img/4geeks.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Solitario</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
 
-    <!-- Fontawesome is our recomended library for icons -->
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-      integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <!-- Write your HTML code here, you can delete everything withing the body tags -->
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./assets/img/rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
-      </div>
+  <div class="container-fluid p-4">
+    
+    <!-- MAZO Y DESCARTE -->
+    <div class="d-flex gap-3 mb-3">
+      <div id="mazo"></div>
+      <div id="descarte"></div>
     </div>
 
-    <!-- Do not delete this script tag, this is what connects your HTML with the Javascript code -->
-    <script type="module" src="/app.js"></script>
-  </body>
+    <!-- FUNDACIONES -->
+    <div class="d-flex justify-content-between align-items-start mb-3">
+  <div class="d-flex gap-3">
+    <div id="mazo"></div>
+    <div id="descarte"></div>
+  </div>
+  <div class="d-flex gap-3" id="fundaciones">
+    <div id="fundacion-♠" class="fundacion"></div>
+    <div id="fundacion-♣" class="fundacion"></div>
+    <div id="fundacion-♥" class="fundacion"></div>
+    <div id="fundacion-♦" class="fundacion"></div>
+  </div>
+</div>
+
+
+    <!-- COLUMNAS -->
+    <div class="row tablero justify-content-start">
+      <div class="col" id="columna-0"></div>
+      <div class="col" id="columna-1"></div>
+      <div class="col" id="columna-2"></div>
+      <div class="col" id="columna-3"></div>
+      <div class="col" id="columna-4"></div>
+      <div class="col" id="columna-5"></div>
+      <div class="col" id="columna-6"></div>
+    </div>
+  </div>
+
+  <script src="app.js"></script>
+</body>
 </html>
