--- a/src/index.html
+++ b/src/index.html
@@ -26,16 +26,21 @@
   </div>
 
   <!-- COLUMNAS -->
-  <div class="d-flex justify-content-center gap-2" id="tablero" style="width: 700px;">
-    <div id="columna-0"></div>
-    <div id="columna-1"></div>
-    <div id="columna-2"></div>
-    <div id="columna-3"></div>
-    <div id="columna-4"></div>
-    <div id="columna-5"></div>
-    <div id="columna-6"></div>
-  </div>
+ <div id="tablero" class="d-flex justify-content-center">
+  <div id="columna-0"></div>
+  <div id="columna-1"></div>
+  <div id="columna-2"></div>
+  <div id="columna-3"></div>
+  <div id="columna-4"></div>
+  <div id="columna-5"></div>
+  <div id="columna-6"></div>
+</div>
 
+</div>
+<div class="text-center mt-4">
+  <button id="reiniciarBtn" class="btn btn-outline-light btn-lg px-4 shadow">
+    🔄 Barajar de nuevo
+  </button>
 </div>
 
   <script src="app.js"></script>
