--- a/src/index.html
+++ b/src/index.html
@@ -6,43 +6,64 @@
   <title>Solitario</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      background-color: #1b8a56;
+      font-family: sans-serif;
+    }
+  </style>
 </head>
 <body>
 
-<div class="container d-flex flex-column align-items-center">
+<div class="container d-flex flex-row justify-content-start align-items-start gap-5 mt-4">
 
-  <!-- MAZO, DESCARTE Y FUNDACIONES -->
-  <div class="d-flex justify-content-between align-items-start mb-4" style="width: 700px;">
-    <div class="d-flex gap-3">
-      <div id="mazo"></div>
-      <div id="descarte"></div>
-    </div>
-    <div class="d-flex gap-3" id="fundaciones">
-      <div id="fundacion-♠" class="fundacion"></div>
-      <div id="fundacion-♣" class="fundacion"></div>
-      <div id="fundacion-♥" class="fundacion"></div>
-      <div id="fundacion-♦" class="fundacion"></div>
+  <!-- CONTROLES A LA IZQUIERDA -->
+  <div id="panel-controles" class="d-flex flex-column gap-3">
+    <button id="reiniciarBtn" class="btn btn-outline-light btn-lg shadow">
+      🔄 Barajar de nuevo
+    </button>
+
+    <div>
+      <label for="reversoSelect" class="form-label text-white">🎴 Reverso de carta:</label>
+      <select id="reversoSelect" class="form-select w-auto">
+        <option value="llanerosolitario.png">Llanero Solitario</option>
+        <option value="avatar.png">Avatar</option>
+        <option value="starwars.png">Star Wars</option>
+      </select>
     </div>
   </div>
 
-  <!-- COLUMNAS -->
- <div id="tablero" class="d-flex justify-content-center">
-  <div id="columna-0"></div>
-  <div id="columna-1"></div>
-  <div id="columna-2"></div>
-  <div id="columna-3"></div>
-  <div id="columna-4"></div>
-  <div id="columna-5"></div>
-  <div id="columna-6"></div>
+  <!-- JUEGO A LA DERECHA -->
+  <div class="d-flex flex-column align-items-center w-100">
+
+    <!-- MAZO Y FUNDACIONES -->
+    <div class="d-flex justify-content-between align-items-start mb-4" style="width: 700px;">
+      <div class="d-flex gap-3">
+        <div id="mazo"></div>
+        <div id="descarte"></div>
+      </div>
+      <div class="d-flex gap-3" id="fundaciones">
+        <div id="fundacion-♠" class="fundacion"></div>
+        <div id="fundacion-♣" class="fundacion"></div>
+        <div id="fundacion-♥" class="fundacion"></div>
+        <div id="fundacion-♦" class="fundacion"></div>
+      </div>
+    </div>
+
+    <!-- COLUMNAS -->
+    <div id="tablero" class="d-flex justify-content-center">
+      <div id="columna-0"></div>
+      <div id="columna-1"></div>
+      <div id="columna-2"></div>
+      <div id="columna-3"></div>
+      <div id="columna-4"></div>
+      <div id="columna-5"></div>
+      <div id="columna-6"></div>
+    </div>
+
+  </div>
 </div>
 
-</div>
-<div class="text-center mt-4">
-  <button id="reiniciarBtn" class="btn btn-outline-light btn-lg px-4 shadow">
-    🔄 Barajar de nuevo
-  </button>
-</div>
-
-  <script src="app.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
